# Adamaton

./: .dockerignore  .env.example  .gitignore  .gitmodules  .golangci.yml  CLAUDE.md  Makefile  README.md  go.work  go.work.sum
.claude/workflows/: kanban_orchestrator.js
.github/workflows/: ai_pr_review.yml
deploy/blackwell/: .env.example  MANIFEST.yaml  docker-compose.yml  image-tags.env.example  up.sh
deploy/health/: topology.yml
deploy/pi5/: .env.example  Caddyfile  GARAGE_MIGRATION.md  LDR_BRINGUP.md  MANIFEST.yaml  docker-compose.override.yml.example  docker-compose.yml  garage.toml  image-tags.env.example  postgres-pi.conf  up.sh
deploy/pi5-speaker/: .env.example  MANIFEST.yaml  docker-compose.yml  image-tags.env.example  up.sh
deploy/pi5/infra/cluster-sidecar/: Dockerfile  pyproject.toml
deploy/pi5/infra/cluster-sidecar/app/: main.py  registry.py
deploy/pi5/infra/sidecar/: Dockerfile  pyproject.toml
deploy/pi5/infra/sidecar/app/: main.py
deploy/systemd/: README.md  adamaton-fleet-verify.service  adamaton-fleet-verify.timer  evo-api.service  evo-worker@.service  evo.target  pr-review-worker.service  reindex-worker.service  skills-worker.service  temporal-server.service
docs/: AGENT_ONBOARDING.md  ARCHITECTURE.md  BIN_ADAM_REFERENCE.md  CICD.md  CROSS_MODULE.md  DASHBOARD_DEV.md  DEPLOY.md  LOCAL_DEV.md  MIGRATION.md  PROJECTS_KANBAN.md  PUSH_DEPLOY.md  TESTING.md  WHERE_DID_IT_GO.md  WORKTREE_WORKFLOW.md
hooks/: commit-msg  pre-commit  pre-push
scripts/: check-env-example.sh  cleanup-sqlite-leftovers.sh  crashloop-guard.py  crashloop-guard.service  crashloop-guard.timer  migrate.sh  register-gitea-agents.sh  setup-dev.sh  sync-agent-memory-to-pi.sh
(+96 files in other folders)
