[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-cluster-sidecar"
version = "0.1.0"
description = "UMAP + HDBSCAN clustering sidecar for SkillRAE. Exposes /v1/cluster (bulk hierarchical clustering) and /v1/assign (single-skill nearest-community assignment)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "evo" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.10",
    "numpy>=1.26",
    "scipy>=1.14",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    # Workers-table self-registration so the sidecar appears in the
    # evo dashboard's Nodes UI alongside the Go workers.
    "asyncpg>=0.30",
    "psutil>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
